--- a/nginx.conf
+++ b/nginx.conf
@@ -14,12 +14,11 @@ http {
         return 301 https://$host$request_uri;
     }
 
-    # Универсальная обработка поддоменов
+    # Основной домен
     server {
         listen 443 ssl;
-        server_name *.cvirko-vadim.ru;
+        server_name cvirko-vadim.ru;
 
-        # Указываем SSL-сертификаты (можно настроить wildcard-сертификат для *.cvirko-vadim.ru)
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
@@ -27,16 +26,6 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            # Извлечение поддомена из имени хоста
-            set $subdomain "";
-            if ($host ~* ^(.*?)\.cvirko-vadim\.ru$) {
-                set $subdomain $1;
-            }
-
-            # Прокидываем поддомен в путь для Next.js
-            rewrite ^/(.*)$ /$subdomain/$1 break;
-
-            # Проксируем запросы на Next.js
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -44,13 +33,65 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            # CORS-заголовки
+            # Заголовки CORS
             add_header Access-Control-Allow-Origin "*";
             add_header Access-Control-Allow-Credentials "true";
 
             if ($request_method = 'OPTIONS') {
                 return 204;
             }
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Поддомены
+    server {
+        listen 443 ssl;
+        server_name phone.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        }
+
+        location / {
+            proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
         }
 
         # Next.js статические файлы
