--- a/nginx.conf
+++ b/nginx.conf
@@ -81,7 +81,7 @@ http {
             proxy_cache_bypass $http_upgrade;
 
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Origin "*";
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
                 add_header Access-Control-Allow-Credentials "true" always;
@@ -90,8 +90,8 @@ http {
                 return 204;
             }
             
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Credentials "true";
         }
 
         # Next.js статические файлы
