--- a/nginx.conf
+++ b/nginx.conf
@@ -68,9 +68,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://cvirko-vadim.ru$uri$is_args$args;
-        }
+        # location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+        #     return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        # }
 
         location / {
             proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
