--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,11 @@ http {
             add_header Access-Control-Allow-Credentials "true";
 
             if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
                 return 204;
             }
         }
@@ -57,7 +62,7 @@ http {
         }
     }
 
-    # Поддомены
+    # Поддомен phone.cvirko-vadim.ru
     server {
         listen 443 ssl;
         server_name phone.cvirko-vadim.ru;
@@ -68,12 +73,15 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-        #     return 301 https://cvirko-vadim.ru$uri$is_args$args;
-        # }
+        # Перенаправление на основной домен для определённых путей
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        }
 
+        # Проксирование запросов на /phone
         location / {
-            proxy_pass http://nextjs/tv1;  # Проксируем на /tv1
+            rewrite ^(.*)$ /phone$1 break;
+            proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -84,12 +92,11 @@ http {
                 add_header Access-Control-Allow-Origin "*";
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
-            
+
             add_header Access-Control-Allow-Origin "*";
             add_header Access-Control-Allow-Credentials "true";
         }
