--- a/nginx.conf
+++ b/nginx.conf
@@ -73,15 +73,14 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Перенаправление на основной домен для определённых путей
+        # Перенаправление определённых путей на основной домен
         location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://cvirko-vadim.ru$uri$is_args$args;
         }
 
-        # Проксирование запросов на /phone
+        # Проксирование запросов на /phone, сохраняя адрес
         location / {
-            rewrite ^(.*)$ /phone$1 break;
-            proxy_pass http://nextjs;
+            proxy_pass http://nextjs/phone;  # Важный момент: проксируем /phone, но адрес остаётся неизменным
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
