--- a/nginx.conf
+++ b/nginx.conf
@@ -80,7 +80,7 @@ http {
 
         # Проксирование запросов на /phone, сохраняя адрес
         location / {
-            proxy_pass http://nextjs/phone;  # Важный момент: проксируем /phone, но адрес остаётся неизменным
+            proxy_pass http://nextjs/phone;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
