--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 events {}
 
 http {
-
     # Backend приложения
     upstream nextjs {
         server nextjs-app:3000;
@@ -80,7 +79,7 @@ http {
 
         # Проксирование запросов на /phone, сохраняя адрес
         location / {
-            proxy_pass http://nextjs/phone;  
+            proxy_pass http://nextjs;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -101,6 +100,53 @@ http {
         }
 
         # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Для других поддоменов можно добавить аналогичную логику, например:
+    server {
+        listen 443 ssl;
+        server_name tv.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs;  # Прокси на Next.js без добавления пути
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Credentials "true";
+        }
+
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
