--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;
+            proxy_pass http://nextjs;  # Проксируем на основное приложение Next.js
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -72,14 +72,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Перенаправление определённых путей на основной домен
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://cvirko-vadim.ru$uri$is_args$args;
-        }
-
-        # Проксирование запросов на /phone, сохраняя адрес
+        # Проксирование запросов на phone.cvirko-vadim.ru на соответствующий путь в Next.js
         location / {
-            proxy_pass http://nextjs;  
+            proxy_pass http://nextjs;  # Проксируем все запросы на сервер Next.js
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -99,7 +94,6 @@ http {
             add_header Access-Control-Allow-Credentials "true";
         }
 
-        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
@@ -115,7 +109,7 @@ http {
         }
     }
 
-    # Для других поддоменов можно добавить аналогичную логику, например:
+    # Поддомен tv.cvirko-vadim.ru
     server {
         listen 443 ssl;
         server_name tv.cvirko-vadim.ru;
@@ -127,7 +121,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  # Прокси на Next.js без добавления пути
+            proxy_pass http://nextjs;  # Проксируем запросы на сервер Next.js
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
