--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
 
             # Заголовки CORS
@@ -49,14 +49,14 @@ http {
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
         }
     }
@@ -72,14 +72,18 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Проксирование запросов на phone.cvirko-vadim.ru на соответствующий путь в Next.js
+        # Проксирование запросов на phone.cvirko-vadim.ru
         location / {
             proxy_pass http://nextjs;  # Проксируем все запросы на сервер Next.js
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
+
+            # Заголовки CORS
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Credentials "true";
 
             if ($request_method = 'OPTIONS') {
                 add_header Access-Control-Allow-Origin "*";
@@ -89,22 +93,19 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Credentials "true";
         }
 
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
         }
     }
@@ -125,8 +126,12 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
+
+            # Заголовки CORS
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Credentials "true";
 
             if ($request_method = 'OPTIONS') {
                 add_header Access-Control-Allow-Origin "*";
@@ -136,22 +141,19 @@ http {
                 add_header Content-Type text/plain;
                 return 204;
             }
-
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Credentials "true";
         }
 
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host;  # Сохраняем оригинальный хост
             proxy_cache_bypass $http_upgrade;
         }
     }
