--- a/nginx.conf
+++ b/nginx.conf
@@ -74,11 +74,11 @@ http {
 
         # Проксирование запросов на phone.cvirko-vadim.ru
         location / {
-            proxy_pass http://nextjs;  # Проксируем все запросы на сервер Next.js
+            proxy_pass http://nextjs/phone;  # Проксируем на /phone
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
             # Заголовки CORS
@@ -111,50 +111,5 @@ http {
     }
 
     # Поддомен tv.cvirko-vadim.ru
-    server {
-        listen 443 ssl;
-        server_name tv.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location / {
-            proxy_pass http://nextjs;  # Проксируем запросы на сервер Next.js
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
-            proxy_cache_bypass $http_upgrade;
-
-            # Заголовки CORS
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Credentials "true";
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*";
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
 }
