--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
+            proxy_set_header Host $host;  
             proxy_cache_bypass $http_upgrade;
 
             # Заголовки CORS
@@ -72,9 +72,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Проксирование запросов на phone.cvirko-vadim.ru
+
         location / {
-            proxy_pass http://nextjs/phone;  # Проксируем на /phone
+            proxy_pass http://nextjs/phone; 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -109,7 +109,4 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
-
-    # Поддомен tv.cvirko-vadim.ru
-
 }
