--- a/nginx.conf
+++ b/nginx.conf
@@ -1,67 +1,83 @@
 events {}
 
 http {
-    # Backend приложения
+    # Общие CORS заголовки
+
+    map $http_origin $cors {
+        default "";
+        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
+    }
+
     upstream nextjs {
         server nextjs-app:3000;
     }
 
-    # Перенаправление HTTP на HTTPS
+    # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru;
         return 301 https://$host$request_uri;
     }
 
-    # Основной домен
+    # Основной домен technobar.by
     server {
         listen 443 ssl;
         server_name cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  # Проксируем на основное приложение Next.js
+            proxy_pass http://nextjs;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;  
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            # Заголовки CORS
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Credentials "true";
-
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Origin $cors always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
         }
 
+        # Дополнительные страницы
+        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
     }
 
-    # Поддомен phone.cvirko-vadim.ru
+    # Поддомен phone.technobar.by
     server {
         listen 443 ssl;
         server_name phone.cvirko-vadim.ru;
@@ -72,40 +88,203 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://cvirko-vadim.ru.by$uri$is_args$args;
+        }
 
         location / {
-            proxy_pass http://nextjs/phone; 
+            proxy_pass http://nextjs/phone;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            # Заголовки CORS
-            add_header Access-Control-Allow-Origin "*";
-            add_header Access-Control-Allow-Credentials "true";
-
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "*";
+                add_header Access-Control-Allow-Origin $cors always;
                 add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
                 add_header Content-Length 0;
                 add_header Content-Type text/plain;
                 return 204;
             }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
         }
 
+        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;  # Сохраняем оригинальный хост
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Поддомен phone2.technobar.by
+    server {
+        listen 443 ssl;
+        server_name phone2.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        }
+
+        location / {
+            proxy_pass http://nextjs/phone2; 
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Поддомен laptop1.technobar.by
+    server {
+        listen 443 ssl;
+        server_name laptop1.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        }
+
+        location / {
+            proxy_pass http://nextjs/laptop1; 
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+    }
+
+    # Поддомен tv1.technobar.by
+    server {
+        listen 443 ssl;
+        server_name tv1.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
+            return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        }
+
+        location / {
+            proxy_pass http://nextjs/tv1;  
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+            
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        # Next.js статические файлы
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
     }
