--- a/nginx.conf
+++ b/nginx.conf
@@ -24,8 +24,8 @@ http {
         listen 443 ssl;
         server_name cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/technobar.by/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/technobar.by/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
