--- a/nginx.conf
+++ b/nginx.conf
@@ -135,7 +135,7 @@ http {
         listen 443 ssl;
         server_name phone2.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
