--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
     # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+        server_name cvirko-vadim.ru ;
         return 301 https://$host$request_uri;
     }
 
