--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,7 @@
 events {}
 
 http {
-    # Общие CORS заголовки
-
+    # Общие CORS-заголовки
     map $http_origin $cors {
         default "";
         ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
@@ -15,11 +14,11 @@ http {
     # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
-        server_name cvirko-vadim.ru ;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
         return 301 https://$host$request_uri;
     }
 
-    # Основной домен technobar.by
+    # Основной домен cvirko-vadim.ru
     server {
         listen 443 ssl;
         server_name cvirko-vadim.ru;
@@ -31,56 +30,40 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://nextjs;  
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Дополнительные страницы
-        location ~ ^/(pk|thank-you|[a-zA-Z0-9-]+)$ {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
         }
 
-        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 
-    # Поддомен phone.technobar.by
+    # Обработка поддоменов
     server {
         listen 443 ssl;
-        server_name phone.cvirko-vadim.ru;
+        server_name phone.cvirko-vadim.ru phone2.cvirko-vadim.ru laptop1.cvirko-vadim.ru tv1.cvirko-vadim.ru;
 
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
@@ -88,12 +71,23 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://cvirko-vadim.ru.by$uri$is_args$args;
-        }
-
         location / {
-            proxy_pass http://nextjs/phone;  
+            # Перенаправляем запросы на соответствующие маршруты в Next.js
+            set $subdomain_route "";
+            if ($host ~* ^phone\.cvirko-vadim\.ru$) {
+                set $subdomain_route "/phone";
+            }
+            if ($host ~* ^phone2\.cvirko-vadim\.ru$) {
+                set $subdomain_route "/phone2";
+            }
+            if ($host ~* ^laptop1\.cvirko-vadim\.ru$) {
+                set $subdomain_route "/laptop1";
+            }
+            if ($host ~* ^tv1\.cvirko-vadim\.ru$) {
+                set $subdomain_route "/tv1";
+            }
+
+            proxy_pass http://nextjs$subdomain_route;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -114,79 +108,19 @@ http {
             add_header Access-Control-Allow-Credentials "true" always;
         }
 
-        # Next.js статические файлы
         location /_next/ {
             proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
 
         location /static/ {
             proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 
-    # Поддомен phone2.technobar.by
+    # Общие страницы
     server {
         listen 443 ssl;
-        server_name phone2.cvirko-vadim.ru;
-
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://cvirko-vadim.ru$uri$is_args$args;
-        }
-
-        location / {
-            proxy_pass http://nextjs/phone2; 
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Поддомен laptop1.technobar.by
-    server {
-        listen 443 ssl;
-        server_name laptop1.cvirko-vadim.ru;
+        server_name phone.cvirko-vadim.ru phone2.cvirko-vadim.ru laptop1.cvirko-vadim.ru tv1.cvirko-vadim.ru;
 
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
@@ -196,96 +130,6 @@ http {
 
         location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
             return 301 https://cvirko-vadim.ru$uri$is_args$args;
-        }
-
-        location / {
-            proxy_pass http://nextjs/laptop1; 
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
-
-    # Поддомен tv1.technobar.by
-    server {
-        listen 443 ssl;
-        server_name tv1.cvirko-vadim.ru;
-
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://cvirko-vadim.ru$uri$is_args$args;
-        }
-
-        location / {
-            proxy_pass http://nextjs/tv1;  
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin $cors always;
-                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
-                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
-                add_header Access-Control-Allow-Credentials "true" always;
-                add_header Content-Length 0;
-                add_header Content-Type text/plain;
-                return 204;
-            }
-            
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        # Next.js статические файлы
-        location /_next/ {
-            proxy_pass http://nextjs/_next/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs/static/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
         }
     }
 }
