--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,3 @@
-events {}
-
 http {
     # Общие CORS-заголовки
     map $http_origin $cors {
@@ -60,10 +58,10 @@ http {
         }
     }
 
-    # Обработка поддоменов
+    # Поддомен phone.cvirko-vadim.ru
     server {
         listen 443 ssl;
-        server_name phone.cvirko-vadim.ru phone2.cvirko-vadim.ru laptop1.cvirko-vadim.ru tv1.cvirko-vadim.ru;
+        server_name phone.cvirko-vadim.ru;
 
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
@@ -71,23 +69,9 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        # Убедимся, что нет редиректа на основной домен
         location / {
-            # Перенаправляем запросы на соответствующие маршруты в Next.js
-            set $subdomain_route "";
-            if ($host ~* ^phone\.cvirko-vadim\.ru$) {
-                set $subdomain_route "/phone";
-            }
-            if ($host ~* ^phone2\.cvirko-vadim\.ru$) {
-                set $subdomain_route "/phone2";
-            }
-            if ($host ~* ^laptop1\.cvirko-vadim\.ru$) {
-                set $subdomain_route "/laptop1";
-            }
-            if ($host ~* ^tv1\.cvirko-vadim\.ru$) {
-                set $subdomain_route "/tv1";
-            }
-
-            proxy_pass http://nextjs$subdomain_route;
+            proxy_pass http://nextjs/phone;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -117,10 +101,10 @@ http {
         }
     }
 
-    # Общие страницы
+    # Поддомен phone2.cvirko-vadim.ru
     server {
         listen 443 ssl;
-        server_name phone.cvirko-vadim.ru phone2.cvirko-vadim.ru laptop1.cvirko-vadim.ru tv1.cvirko-vadim.ru;
+        server_name phone2.cvirko-vadim.ru;
 
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
@@ -128,8 +112,34 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location ~ ^/(thank-you|pk|pass|po|guarantee)$ {
-            return 301 https://cvirko-vadim.ru$uri$is_args$args;
+        location / {
+            proxy_pass http://nextjs/phone2;  
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
         }
     }
 }
