--- a/nginx.conf
+++ b/nginx.conf
@@ -144,4 +144,44 @@ http {
             proxy_pass http://nextjs/static/;
         }
     }
+       server {
+        listen 443 ssl;
+        server_name tv1.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/tv1.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tv1.cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass http://nextjs/tv1;  
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            if ($request_method = 'OPTIONS') {
+                add_header Access-Control-Allow-Origin $cors always;
+                add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE" always;
+                add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+                add_header Access-Control-Allow-Credentials "true" always;
+                add_header Content-Length 0;
+                add_header Content-Type text/plain;
+                return 204;
+            }
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+        }
+    }
 }
