--- a/nginx.conf
+++ b/nginx.conf
@@ -64,13 +64,12 @@ http {
         listen 443 ssl;
         server_name phone.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/phone.cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/phone.cvirko-vadim.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        # Убедимся, что нет редиректа на основной домен
         location / {
             proxy_pass http://nextjs/phone;  
             proxy_http_version 1.1;
@@ -143,6 +142,7 @@ http {
             proxy_pass http://nextjs/static/;
         }
     }
+    
     server {
         listen 443 ssl;
         server_name tv1.cvirko-vadim.ru;
