--- a/nginx.conf
+++ b/nginx.conf
@@ -71,6 +71,10 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
+            return 301 https://cvirko-vadim.by$uri$is_args$args;
+        }
+
         location / {
             proxy_pass http://nextjs/tv1;  
             proxy_http_version 1.1;
@@ -111,6 +115,10 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+
+        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
+            return 301 https://cvirko-vadim.by$uri$is_args$args;
+        }
 
         location / {
             proxy_pass http://nextjs/phone;  
