--- a/nginx.conf
+++ b/nginx.conf
@@ -60,6 +60,54 @@ http {
         }
     }
 
+    server {
+        listen 443 ssl;
+        server_name *.cvirko-vadim.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+        # Редиректы фиксированных страниц
+        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
+            return 301 https://technobar.by$uri$is_args$args;
+        }
+
+        # Обработка CORS
+        location / {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs/_next/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            add_header Access-Control-Allow-Origin $cors always;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs/static/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            add_header Access-Control-Allow-Origin $cors always;
+        }
+    }
     
     server {
         listen 443 ssl;
@@ -71,9 +119,7 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
-            return 301 https://cvirko-vadim.by$uri$is_args$args;
-        }
+       
 
         location / {
             proxy_pass http://nextjs/tv1;  
@@ -115,10 +161,6 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
-
-        location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
-            return 301 https://cvirko-vadim.by$uri$is_args$args;
-        }
 
         location / {
             proxy_pass http://nextjs/phone;  
