--- a/nginx.conf
+++ b/nginx.conf
@@ -122,7 +122,7 @@ http {
        
 
         location / {
-            proxy_pass http://nextjs/tv1;  
+            proxy_pass http://nextjs/;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
