--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 events {}
 
 http {
-    # Общие CORS-заголовки
     map $http_origin $cors {
         default "";
         ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
@@ -11,14 +10,12 @@ http {
         server nextjs-app:3000;
     }
 
-    # Редирект HTTP -> HTTPS для всех доменов
     server {
         listen 80;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru;
         return 301 https://$host$request_uri;
     }
 
-    # Основной домен cvirko-vadim.ru 
     server {
         listen 443 ssl;
         server_name cvirko-vadim.ru;
@@ -28,6 +25,10 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+
+        proxy_cache off;
+        proxy_no_cache 1;
+        proxy_buffering off;
 
         location / {
             proxy_pass http://nextjs;
@@ -69,6 +70,10 @@ http {
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+
+        proxy_cache off;
+        proxy_no_cache 1;
+        proxy_buffering off;
 
         # Редиректы фиксированных страниц
         location ~ ^/(thank-you|pk|po|guarantee|pass)$ {
@@ -119,10 +124,14 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        proxy_cache off;
+        proxy_no_cache 1;
+        proxy_buffering off;
+
        
 
         location / {
-            proxy_pass http://nextjs/;  
+            proxy_pass http://nextjs;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -162,8 +171,12 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
+        proxy_cache off;
+        proxy_no_cache 1;
+        proxy_buffering off;
+
         location / {
-            proxy_pass http://nextjs/;  
+            proxy_pass http://nextjs;  
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
