--- a/nginx.conf
+++ b/nginx.conf
@@ -64,7 +64,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/tv1.cvirko-vadim.ru/privkey.pem;
 
         location / {
-            proxy_pass http://nextjs/tv1;
+            proxy_pass http://nextjs;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
