--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,18 @@ http {
             add_header Access-Control-Allow-Origin $cors always;
             add_header Access-Control-Allow-Credentials "true" always;
         }
+
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
     }
 
     server {
@@ -54,6 +66,18 @@ http {
             add_header Access-Control-Allow-Origin $cors always;
             add_header Access-Control-Allow-Credentials "true" always;
         }
+
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
     }
 
     server {
@@ -73,6 +97,18 @@ http {
 
             add_header Access-Control-Allow-Origin $cors always;
             add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
         }
     }
 }
