--- a/nginx.conf
+++ b/nginx.conf
@@ -20,8 +20,8 @@ http {
         listen 443 ssl;
         server_name cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/cvirko-vadim.ru-0001/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/'cvirko-vadim.ru-0001'/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/'cvirko-vadim.ru-0001'/privkey.pem;
 
         location / {
             proxy_pass http://nextjs;
@@ -52,8 +52,8 @@ http {
         listen 443 ssl;
         server_name phone.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru-0001/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/'cvirko-vadim.ru-0001'/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/'cvirko-vadim.ru-0001'/privkey.pem;
 
         location / {
             proxy_pass http://nextjs;
@@ -84,8 +84,8 @@ http {
         listen 443 ssl;
         server_name tv1.cvirko-vadim.ru;
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru-0001/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/'cvirko-vadim.ru-0001'/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/'cvirko-vadim.ru-0001'/privkey.pem;
 
         location / {
             proxy_pass http://nextjs;
