--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 events {}
+events {}
 
 http {
     map $http_origin $cors {
@@ -10,83 +11,22 @@ http {
         server nextjs-app:3000;
     }
 
+    # Редирект на HTTPS для всех запросов на HTTP
     server {
         listen 80;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru;
         return 301 https://$host$request_uri;
     }
 
+    # HTTPS конфигурация для всех поддоменов
     server {
         listen 443 ssl;
-        server_name cvirko-vadim.ru;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;  # Все поддомены и основной домен
 
         ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru-0001/privkey.pem;
 
-        location / {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name phone.cvirko-vadim.ru;
-
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru-0001/privkey.pem;
-
-        location / {
-            proxy_pass http://nextjs;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
-        }
-
-        location /_next/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-
-        location /static/ {
-            proxy_pass http://nextjs;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name tv1.cvirko-vadim.ru;
-
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru-0001/privkey.pem;
-
+        # Прокси на Next.js приложение
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
