--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.13.5",
+		"@emotion/styled": "^11.13.5",
+		"@mui/material": "^6.1.10",
 		"axios": "^1.7.7",
 		"classnames": "^2.5.1",
 		"framer-motion": "^11.11.17",
@@ -17,6 +20,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
+		"react-input-mask": "^2.0.4",
 		"react-select": "^5.8.3",
 		"react-text-mask": "^5.5.0",
 		"swiper": "^11.1.14"
