--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ http {
         listen 443 ssl;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru;  # Все поддомены и основной домен
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru-0001/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru-0001/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
 
         # Прокси на Next.js приложение
         location / {
