--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "bartech",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -11,10 +12,13 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@mui/icons-material": "^6.2.0",
 		"@mui/material": "^6.2.0",
 		"axios": "^1.7.9",
 		"classnames": "^2.5.1",
+		"dotenv": "^16.4.7",
 		"framer-motion": "^11.11.17",
+		"mongodb": "^6.12.0",
 		"next": "^15.0.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -23,7 +27,7 @@
 		"react-input-mask": "^2.0.4",
 		"react-select": "^5.8.3",
 		"react-text-mask": "^5.5.0",
-		"swiper": "^11.1.14",
+		"swiper": "^11.1.15",
 		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
