отображение картинок на под доменнах

--- a/nginx.conf
+++ b/nginx.conf
@@ -80,8 +80,10 @@ http {
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' $cors always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
         }
 
         location /_next/ {
@@ -94,6 +96,19 @@ http {
             proxy_pass http://nextjs;
             proxy_cache_bypass $http_upgrade;
             proxy_set_header Host $host;
+        }
+
+        # Serve static files from public directory
+        location /_next/static/ {
+            alias /app/.next/static/;
+            expires 365d;
+            access_log off;
+        }
+
+        location /public/ {
+            alias /app/public/;
+            expires 365d;
+            access_log off;
         }
     }
 }
