--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
     # Logging configuration
     access_log /var/log/nginx/access.log;
@@ -35,7 +37,33 @@ http {
             return 301 https://$host$request_uri;
         }
 
-        # For localhost/development, proceed with HTTP
+        # Root directory for static files
+        root /app;
+
+        # Serve static files directly
+        location /public/ {
+            alias /app/public/;
+            expires 365d;
+            access_log off;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        location /_next/static/ {
+            alias /app/.next/static/;
+            expires 365d;
+            access_log off;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        location /images/ {
+            alias /app/public/images/;
+            expires 365d;
+            access_log off;
+            add_header Cache-Control "public, no-transform";
+            try_files $uri $uri/ =404;
+        }
+
+        # For all other requests, proxy to Next.js
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -49,8 +77,10 @@ http {
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            add_header Access-Control-Allow-Origin $cors always;
-            add_header Access-Control-Allow-Credentials "true" always;
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' $cors always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
         }
     }
 
