--- a/nginx.conf
+++ b/nginx.conf
@@ -41,26 +41,33 @@ http {
         root /app;
 
         # Serve static files directly
-        location /public/ {
-            alias /app/public/;
-            expires 365d;
-            access_log off;
-            add_header Cache-Control "public, no-transform";
-        }
-
-        location /_next/static/ {
-            alias /app/.next/static/;
-            expires 365d;
-            access_log off;
-            add_header Cache-Control "public, no-transform";
-        }
-
-        location /images/ {
-            alias /app/public/images/;
-            expires 365d;
-            access_log off;
-            add_header Cache-Control "public, no-transform";
+        location /public {
+            root /app;
             try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
+        }
+
+        location /_next/static {
+            root /app;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
+        }
+
+        location /images {
+            alias /app/public/images;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
+            access_log off;
+            
+            # Debug logging
+            error_log /var/log/nginx/images_debug.log debug;
+            
+            # Add CORS headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' '*' always;
         }
 
         # For all other requests, proxy to Next.js
@@ -80,7 +87,18 @@ http {
             # CORS headers
             add_header 'Access-Control-Allow-Origin' $cors always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            add_header 'Access-Control-Allow-Headers' '*' always;
+            
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' '*';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
     }
 
@@ -113,7 +131,7 @@ http {
             # CORS headers
             add_header 'Access-Control-Allow-Origin' $cors always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            add_header 'Access-Control-Allow-Headers' '*' always;
         }
 
         location /_next/ {
